hphp/hack/test/typecheck/namespace/use_conflict_const4.php
<?hh

const int FOO = 0;

use const NS\FOO;
